updateAuth2