@@ -3,19 +3,24 @@ package com.example.auth.config;
 import com.example.auth.repository.PermissionRepository;
 import com.example.auth.repository.RoleRepository;
 import com.example.auth.repository.UserRepository;
+import com.example.common.enums.RecordStatus;
 import com.example.common.model.Permission;
 import com.example.common.model.Role;
 import com.example.common.model.User;
+import jakarta.transaction.Transactional;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Component;
 
+import java.time.LocalDateTime;
 import java.util.Arrays;
 import java.util.HashSet;
 import java.util.Set;
 
 @Component
+@Slf4j
 public class DataInitializer implements CommandLineRunner {
 
     private final UserRepository userRepository;
@@ -24,11 +29,8 @@ public class DataInitializer implements CommandLineRunner {
     private final PasswordEncoder passwordEncoder;
 
     @Autowired
-    public DataInitializer(
-            UserRepository userRepository,
-            RoleRepository roleRepository,
-            PermissionRepository permissionRepository,
-            PasswordEncoder passwordEncoder) {
+    public DataInitializer(UserRepository userRepository, RoleRepository roleRepository,
+                           PermissionRepository permissionRepository, PasswordEncoder passwordEncoder) {
         this.userRepository = userRepository;
         this.roleRepository = roleRepository;
         this.permissionRepository = permissionRepository;
@@ -36,70 +38,91 @@ public class DataInitializer implements CommandLineRunner {
     }
 
     @Override
+    @Transactional
     public void run(String... args) {
+        log.info("Initializing security data...");
+
+        // ১. অ্যাকশন ভিত্তিক গ্লোবাল পারমিশন (Full Words)
         Permission readPermission = createPermissionIfNotFound("READ");
         Permission writePermission = createPermissionIfNotFound("WRITE");
+        Permission updatePermission = createPermissionIfNotFound("UPDATE");
         Permission deletePermission = createPermissionIfNotFound("DELETE");
-        Permission adminPermission = createPermissionIfNotFound("ADMIN");
-        Permission superAdminPermission = createPermissionIfNotFound("SUPERADMIN");
-        Permission userManagementPermission = createPermissionIfNotFound("USER_MANAGEMENT");
-        Permission roleManagementPermission = createPermissionIfNotFound("ROLE_MANAGEMENT");
 
-        Set<Permission> userPermissions = new HashSet<>(Arrays.asList(readPermission));
-        Role userRole = createRoleIfNotFound("USER", userPermissions);
+        // ২. মডিউল ভিত্তিক স্পেসিফিক পারমিশন (Full Words)
+        Permission userManagement = createPermissionIfNotFound("USER_MANAGEMENT");
+        Permission roleManagement = createPermissionIfNotFound("ROLE_MANAGEMENT");
 
-        Set<Permission> adminPermissions = new HashSet<>(Arrays.asList(
-                readPermission, writePermission, deletePermission, adminPermission));
-        Role adminRole = createRoleIfNotFound("ADMIN", adminPermissions);
+        // --- রোল তৈরি ও পারমিশন এসাইন ---
 
-        Set<Permission> superAdminPermissions = new HashSet<>(Arrays.asList(
-                readPermission, writePermission, deletePermission, adminPermission, 
-                superAdminPermission, userManagementPermission, roleManagementPermission));
-        Role superAdminRole = createRoleIfNotFound("SUPERADMIN", superAdminPermissions);
+        // USER: শুধু দেখার ক্ষমতা
+        Role userRole = createRoleIfNotFound("USER",
+                new HashSet<>(Set.of(readPermission)));
 
+        // ADMIN: জেনারেল CRUD ক্ষমতা (ম্যানেজমেন্ট বাদে)
+        Role adminRole = createRoleIfNotFound("ADMIN",
+                new HashSet<>(Set.of(readPermission, writePermission, updatePermission, deletePermission)));
+
+        // SUPERADMIN: সব কিছুর ফুল এক্সেস
+        Role superAdminRole = createRoleIfNotFound("SUPERADMIN",
+                new HashSet<>(Set.of(
+                        readPermission, writePermission, updatePermission, deletePermission,
+                        userManagement, roleManagement
+                )));
+
+        // --- ইউজার তৈরি ---
         if (!userRepository.existsByUsername("user")) {
-            User user = new User();
-            user.setUsername("user");
-            user.setPassword(passwordEncoder.encode("password"));
-            user.setEmail("user@example.com");
-            user.setRoles(new HashSet<>(Arrays.asList(userRole)));
-            userRepository.save(user);
+            createUser("user", "user@example.com", "password", Set.of(userRole));
         }
 
         if (!userRepository.existsByUsername("admin")) {
-            User admin = new User();
-            admin.setUsername("admin");
-            admin.setPassword(passwordEncoder.encode("password"));
-            admin.setEmail("admin@example.com");
-            admin.setRoles(new HashSet<>(Arrays.asList(adminRole)));
-            userRepository.save(admin);
+            createUser("admin", "admin@example.com", "password", Set.of(adminRole));
         }
 
         if (!userRepository.existsByUsername("superadmin")) {
-            User superAdmin = new User();
-            superAdmin.setUsername("superadmin");
-            superAdmin.setPassword(passwordEncoder.encode("password"));
-            superAdmin.setEmail("superadmin@example.com");
-            superAdmin.setRoles(new HashSet<>(Arrays.asList(superAdminRole)));
-            userRepository.save(superAdmin);
+            createUser("superadmin", "superadmin@example.com", "password", Set.of(superAdminRole));
         }
+
+        log.info("Security data initialization completed successfully.");
+    }
+
+    private void createUser(String username, String email, String password, Set<Role> roles) {
+        User user = User.builder()
+                .username(username)
+                .email(email)
+                .password(passwordEncoder.encode(password))
+                .roles(roles)
+                .enabled(true)
+                .createdDateTime(LocalDateTime.now())
+                .recordStatus(RecordStatus.ACTIVE)
+                .build();
+        userRepository.save(user);
     }
 
     private Permission createPermissionIfNotFound(String name) {
         return permissionRepository.findByName(name)
                 .orElseGet(() -> {
-                    Permission permission = new Permission();
-                    permission.setName(name);
+                    Permission permission = Permission.builder()
+                            .name(name)
+                            .createdDateTime(LocalDateTime.now())
+                            .recordStatus(RecordStatus.ACTIVE)
+                            .build();
                     return permissionRepository.save(permission);
                 });
     }
 
     private Role createRoleIfNotFound(String name, Set<Permission> permissions) {
         return roleRepository.findByName(name)
-                .orElseGet(() -> {
-                    Role role = new Role();
-                    role.setName(name);
+                .map(role -> {
                     role.setPermissions(permissions);
+                    return roleRepository.save(role);
+                })
+                .orElseGet(() -> {
+                    Role role = Role.builder()
+                            .name(name)
+                            .recordStatus(RecordStatus.ACTIVE)
+                            .createdDateTime(LocalDateTime.now())
+                            .permissions(permissions)
+                            .build();
                     return roleRepository.save(role);
                 });
     }
